force-app/main/default/objects/AnsweredQuestion__c/AnsweredQuestion__c.object-meta.xml
<CustomObject>
    <label>AnsweredQuestion</label>
    <nameField>
        <label>AnsweredQuestion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnsweredQuestions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>