force-app/main/default/objects/AnsweredQuestion__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Question</label>
    <referenceTo>Question__c</referenceTo>
    <relationshipLabel>AnsweredQuestions</relationshipLabel>
    <relationshipName>AnsweredQuestions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>